--- a/source/layout.erb
+++ b/source/layout.erb
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv='X-UA-Compatible' content='IE=edge;chrome=1' />
-    <title>hiropopless<%= ' - ' + current_article.title unless current_article.nil? %></title>
+    <title>ひろぽっぽれす<%= ' - ' + current_article.title unless current_article.nil? %></title>
     <%= feed_tag :atom, "#{blog.options.prefix.to_s}/feed.xml", title: "Atom Feed" %>
-    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css">
-    <link rel="stylesheet" href="/css/blog.css">
+    <link rel="stylesheet" href="/css/styles.css">
+    <script src="/js/all.js"></script>
   </head>
   <body>
     
