--- a/source/layout.erb
+++ b/source/layout.erb
@@ -5,6 +5,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge;chrome=1' />
     <title>ひろぽっぽれす<%= ' - ' + current_article.title unless current_article.nil? %></title>
     <%= feed_tag :atom, "#{blog.options.prefix.to_s}/feed.xml", title: "Atom Feed" %>
+    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.4.1/pure-min.css">
     <link rel="stylesheet" href="/css/styles.css">
     <script src="/js/all.js"></script>
   </head>
